frontend/tests/cases/negative/unsuppliedDefRequiredByInterface.gr
interface Simple a where
  simple : a -> a

data A = A'

-- we fail to provide a definition for 'simple'
instance Simple A
